--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <li><a href="#aup" class="hover:text-blue-400">Acceptable Use Policy</a></li>
           <li><a href="#refund" class="hover:text-blue-400">Refund Policy</a></li>
           <li><a href="#contest" class="hover:text-blue-400">Contest/Giveaway Rules</a></li>
+          <li><a href="#affiliate" class="hover:text-blue-400">Affiliate & Sponsor Disclosure</a></li>
           <li><a href="#disclaimer" class="hover:text-blue-400">Disclaimer</a></li>
           <li><a href="#updates" class="hover:text-blue-400">Updates</a></li>
         </ul>
@@ -48,7 +49,7 @@
       <h3 class="text-2xl font-semibold mb-4">Terms of Service (TOS)</h3>
       <div class="bg-gray-100 p-6 rounded shadow">
         <p class="mb-4">Effective Date: Jan 30, 2026</p>
-        <p><!-- TOS content --></p>
+        <p><!-- Add TOS content here --></p>
         <a href="documents/tos.pdf" class="mt-4 inline-block text-blue-600 hover:underline">Download PDF</a>
       </div>
     </div>
@@ -58,7 +59,7 @@
       <h3 class="text-2xl font-semibold mb-4">End User License Agreement (EULA)</h3>
       <div class="bg-gray-100 p-6 rounded shadow">
         <p class="mb-4">Effective Date: Jan 30, 2026</p>
-        <p><!-- EULA content --></p>
+        <p><!-- Add EULA content here --></p>
         <a href="documents/eula.pdf" class="mt-4 inline-block text-blue-600 hover:underline">Download PDF</a>
       </div>
     </div>
@@ -68,7 +69,7 @@
       <h3 class="text-2xl font-semibold mb-4">Privacy Policy</h3>
       <div class="bg-gray-100 p-6 rounded shadow">
         <p class="mb-4">Effective Date: Jan 30, 2026</p>
-        <p><!-- Privacy content --></p>
+        <p><!-- Add Privacy Policy content here --></p>
         <a href="documents/privacy.pdf" class="mt-4 inline-block text-blue-600 hover:underline">Download PDF</a>
       </div>
     </div>
@@ -78,7 +79,7 @@
       <h3 class="text-2xl font-semibold mb-4">Cookie Policy</h3>
       <div class="bg-gray-100 p-6 rounded shadow">
         <p class="mb-4">Effective Date: Jan 30, 2026</p>
-        <p><!-- Cookie Policy content --></p>
+        <p><!-- Add Cookie Policy content here --></p>
         <a href="documents/cookies.pdf" class="mt-4 inline-block text-blue-600 hover:underline">Download PDF</a>
       </div>
     </div>
@@ -88,7 +89,7 @@
       <h3 class="text-2xl font-semibold mb-4">DMCA / Copyright Policy</h3>
       <div class="bg-gray-100 p-6 rounded shadow">
         <p class="mb-4">Effective Date: Jan 30, 2026</p>
-        <p><!-- DMCA content --></p>
+        <p><!-- Add DMCA content here --></p>
         <a href="documents/dmca.pdf" class="mt-4 inline-block text-blue-600 hover:underline">Download PDF</a>
       </div>
     </div>
@@ -98,7 +99,7 @@
       <h3 class="text-2xl font-semibold mb-4">Community Guidelines / Code of Conduct</h3>
       <div class="bg-gray-100 p-6 rounded shadow">
         <p class="mb-4">Effective Date: Jan 30, 2026</p>
-        <p><!-- Community Guidelines content --></p>
+        <p><!-- Add Community Guidelines content here --></p>
         <a href="documents/community.pdf" class="mt-4 inline-block text-blue-600 hover:underline">Download PDF</a>
       </div>
     </div>
@@ -108,7 +109,7 @@
       <h3 class="text-2xl font-semibold mb-4">Acceptable Use Policy (AUP)</h3>
       <div class="bg-gray-100 p-6 rounded shadow">
         <p class="mb-4">Effective Date: Jan 30, 2026</p>
-        <p><!-- Acceptable Use content --></p>
+        <p><!-- Add AUP content here --></p>
         <a href="documents/aup.pdf" class="mt-4 inline-block text-blue-600 hover:underline">Download PDF</a>
       </div>
     </div>
@@ -118,7 +119,7 @@
       <h3 class="text-2xl font-semibold mb-4">Refund Policy</h3>
       <div class="bg-gray-100 p-6 rounded shadow">
         <p class="mb-4">Effective Date: Jan 30, 2026</p>
-        <p><!-- Refund Policy content --></p>
+        <p><!-- Add Refund Policy content here --></p>
         <a href="documents/refund.pdf" class="mt-4 inline-block text-blue-600 hover:underline">Download PDF</a>
       </div>
     </div>
@@ -128,8 +129,18 @@
       <h3 class="text-2xl font-semibold mb-4">Contest & Giveaway Rules</h3>
       <div class="bg-gray-100 p-6 rounded shadow">
         <p class="mb-4">Effective Date: Jan 30, 2026</p>
-        <p><!-- Contest / Giveaway Rules content --></p>
+        <p><!-- Add Contest Rules content here --></p>
         <a href="documents/contest.pdf" class="mt-4 inline-block text-blue-600 hover:underline">Download PDF</a>
+      </div>
+    </div>
+
+    <!-- Affiliate & Sponsor Disclosure -->
+    <div id="affiliate">
+      <h3 class="text-2xl font-semibold mb-4">Affiliate & Sponsor Disclosure</h3>
+      <div class="bg-gray-100 p-6 rounded shadow">
+        <p class="mb-4">Effective Date: Jan 30, 2026</p>
+        <p><!-- Add Affiliate / Sponsor Disclosure content here --></p>
+        <a href="documents/affiliate.pdf" class="mt-4 inline-block text-blue-600 hover:underline">Download PDF</a>
       </div>
     </div>
 
@@ -138,7 +149,7 @@
       <h3 class="text-2xl font-semibold mb-4">Disclaimer / Liability Notice</h3>
       <div class="bg-gray-100 p-6 rounded shadow">
         <p class="mb-4">Effective Date: Jan 30, 2026</p>
-        <p><!-- Disclaimer content --></p>
+        <p><!-- Add Disclaimer content here --></p>
         <a href="documents/disclaimer.pdf" class="mt-4 inline-block text-blue-600 hover:underline">Download PDF</a>
       </div>
     </div>
