--- a/simple.html
+++ b/simple.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Unpleckable Legal Center - Simplified</title>
+  <a href="index.html" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-500 text-sm">
+  Switch to Full Version
+</a>
+
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-white text-gray-900 font-sans">
